logs/Slang/generated/hdlconv/hdlconvertor_p565.sv.log
name: hdlconvertor_p565
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p565.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p565.sv:1:1: error: language feature not yet supported
covergroup cg @(posedge clk);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p565.sv:6:21: error: expected expression
bins sc = (12 => 3 [-> 1]);
                    ^
